[gd_scene load_steps=8 format=3 uid="uid://c673s0ae4b2fa"]

[ext_resource type="PackedScene" uid="uid://mo48nbk7gxoj" path="res://modeles3d/ring.glb" id="1_l5id4"]
[ext_resource type="Script" path="res://scenes/item/ring_armor_silver.gd" id="2_1j7ko"]
[ext_resource type="AudioStream" uid="uid://bt54qyg4uwvnj" path="res://sons/ring-drop-263966.wav" id="3_1chcq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jbawk"]
albedo_color = Color(0.458405, 0.458405, 0.458405, 1)
metallic = 1.0
metallic_specular = 1.0
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s3xop"]
albedo_color = Color(0.967011, 0.476396, 0.0942879, 1)
metallic = 1.0
metallic_specular = 1.0
roughness = 0.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_lineo"]
height = 0.555748
radius = 0.885508

[sub_resource type="CylinderShape3D" id="CylinderShape3D_m0eut"]
height = 1.56602
radius = 1.49479

[node name="ring_armor_silver" groups=["prehensible"] instance=ExtResource("1_l5id4")]
script = ExtResource("2_1j7ko")

[node name="Cylindre" parent="." index="0"]
layers = 8
material_override = SubResource("StandardMaterial3D_jbawk")

[node name="Icosph√®re" parent="." index="1"]
layers = 8
material_override = SubResource("StandardMaterial3D_s3xop")

[node name="interaction_area" type="Area3D" parent="." index="2" groups=["prehensible"]]
collision_layer = 8
collision_mask = 0

[node name="interaction_form" type="CollisionShape3D" parent="interaction_area" index="0" groups=["prehensible"]]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0)
shape = SubResource("CylinderShape3D_lineo")

[node name="Anneau d\'armure en argent" type="StaticBody3D" parent="." index="3" groups=["prehensible"]]
collision_layer = 8

[node name="body_collision2" type="CollisionShape3D" parent="Anneau d\'armure en argent" index="0"]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0)
shape = SubResource("CylinderShape3D_m0eut")

[node name="audio_pick" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource("3_1chcq")

[node name="Timer" type="Timer" parent="." index="5"]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
